ARREGLOS EN LA HOME Y FINALIZACION

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>BloodLink</title>
+
+  <link
+      rel="icon"
+      type="image/x-icon"
+      href="./src/assets/logo-bl.png"
+    />
 </head>
 
 <body>
